--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.derry.music3b">
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -23,12 +23,12 @@
             </intent-filter>
         </activity>
 
-        <service
-            android:name=".MusicService"
-            android:enabled="true"
-            android:exported="true"></service>
+<!--        <service-->
+<!--            android:name=".MusicService"-->
+<!--            android:enabled="true"-->
+<!--            android:exported="true"></service>-->
     </application>
 
-    <uses-permission android:name="android.permission.WRITE_APN_SETTINGS" />
+<!--    <uses-permission android:name="android.permission.WRITE_APN_SETTINGS" />-->
 
 </manifest>
