--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.derry.music3b">
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -24,6 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MusicActivity" />
+        <activity android:name=".HttpActivity" />
 <!--        <service-->
 <!--            android:name=".MusicService"-->
 <!--            android:enabled="true"-->
